[package]
name = "modelledger-core"
version = "0.1.0"
edition = "2021"
description = "Reference implementation of the ModelLedger ML-SBOM specification"
license = "MIT OR Apache-2.0"
repository = "https://github.com/epaunova/ModelLedger"
keywords = ["ml", "sbom", "provenance", "attestation", "ed25519"]
categories = ["cryptography", "science"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jcs = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"

[dev-dependencies]
rand = "0.8"
